gen/Web/WebParser.java
// Generated from C:/Users/Laser/Desktop/CompilerProject1_IT4-main/src/Web/WebParser.g4 by ANTLR 4.13.2
package Web;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class WebParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		PLUS=1, MINUS=2, STAR=3, SLASH=4, DIV=5, MOD=6, LPAREN=7, RPAREN=8, DOT=9, 
		COMMA=10, EQ=11, NEQ=12, GT=13, LT=14, GTE=15, LTE=16, IFKW=17, ELIFKW=18, 
		ELSEKW=19, ENDIFKW=20, FORKW=21, ENDFORKW=22, SETKW=23, IN=24, ANDKW=25, 
		ORKW=26, ASSIGN=27, PIPE=28, TAG_EQUALS=29, ATTVALUE_TEXT=30, JINJA_EXPR_START=31, 
		JINJA_STMT_START=32, JINJA_EXPR_END=33, JINJA_STMT_END=34, JINJA_NAME=35, 
		JINJA_NUMBER=36, JINJA_STRING=37, HTML_COMMENT=38, STYLE_OPEN=39, SCRIPT_OPEN=40, 
		JINJA_COMMENT_START=41, TAG_OPEN=42, HTML_TEXT=43, TAG_CLOSE=44, TAG_SLASH_CLOSE=45, 
		TAG_SLASH=46, TAG_NAME=47, TAG_WHITESPACE=48, ATTR_DQ_COMMENT_START=49, 
		ATTR_DQ_CLOSE=50, ATTR_SQ_COMMENT_START=51, ATTR_SQ_CLOSE=52, STYLE_CLOSE=53, 
		STYLE_WS=54, STYLE_JINJA_COMMENT_START=55, CSS_COMMENT=56, CSS_LBRACE=57, 
		CSS_RBRACE=58, CSS_COLON=59, CSS_SEMI=60, CSS_DOT=61, CSS_HASH=62, CSS_LPAREN=63, 
		CSS_RPAREN=64, CSS_COMMA=65, CSS_AT=66, CSS_TILDE=67, CSS_IDENT=68, CSS_NUMBER=69, 
		CSS_STRING=70, SCRIPT_JINJA_COMMENT_START=71, SCRIPT_CLOSE=72, SCRIPT_COMMENT=73, 
		SCRIPT_LINE_COMMENT=74, SCRIPT_LBRACE=75, SCRIPT_RBRACE=76, SCRIPT_LT=77, 
		SCRIPT_OTHER=78, JEXPR_WS=79, JSTMT_WS=80, JCOMMENT_END=81, JCOMMENT_TEXT=82, 
		STYLE_PLUS=83, STYLE_MINUS=84, STYLE_STAR=85, JEXPR_END=86, JSTMT_END=87, 
		JSTMT_IF=88, JSTMT_ELIF=89, JSTMT_ELSE=90, JSTMT_ENDIF=91, JSTMT_FOR=92, 
		JSTMT_ENDFOR=93, JSTMT_SET=94, JSTMT_IN=95, JSTMT_AND=96, JSTMT_OR=97, 
		JSTMT_ASSIGN=98;
	public static final int
		RULE_htmlDocument = 0, RULE_htmlContent = 1, RULE_htmlElement = 2, RULE_styleElement = 3, 
		RULE_scriptElement = 4, RULE_attribute = 5, RULE_attributeValue = 6, RULE_attributeValueContent = 7, 
		RULE_styleContent = 8, RULE_scriptContent = 9, RULE_jinjaExpression = 10, 
		RULE_jinjaStatement = 11, RULE_jinjaStatementBody = 12, RULE_expression = 13, 
		RULE_logicalAndExpression = 14, RULE_comparisonExpression = 15, RULE_simpleExpression = 16, 
		RULE_term = 17, RULE_factor = 18, RULE_primary = 19;
	private static String[] makeRuleNames() {
		return new String[] {
			"htmlDocument", "htmlContent", "htmlElement", "styleElement", "scriptElement", 
			"attribute", "attributeValue", "attributeValueContent", "styleContent", 
			"scriptContent", "jinjaExpression", "jinjaStatement", "jinjaStatementBody", 
			"expression", "logicalAndExpression", "comparisonExpression", "simpleExpression", 
			"term", "factor", "primary"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, "'{{'", "'{%'", null, null, 
			null, null, null, "' '", null, null, null, null, null, null, "'/>'", 
			null, null, null, null, "'\"'", null, "'''", "'</style>'", null, null, 
			null, null, null, "':'", "';'", null, "'#'", null, null, null, "'@'", 
			"'~'", null, null, null, null, "'</script>'", null, null, null, null, 
			null, null, null, null, "'#}'", null, null, null, null, "'}}'", "'%}'", 
			"'if'", "'elif'", "'else'", "'endif'", "'for'", "'endfor'", "'set'", 
			"'in'", "'and'", "'or'", "'='"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "PLUS", "MINUS", "STAR", "SLASH", "DIV", "MOD", "LPAREN", "RPAREN", 
			"DOT", "COMMA", "EQ", "NEQ", "GT", "LT", "GTE", "LTE", "IFKW", "ELIFKW", 
			"ELSEKW", "ENDIFKW", "FORKW", "ENDFORKW", "SETKW", "IN", "ANDKW", "ORKW", 
			"ASSIGN", "PIPE", "TAG_EQUALS", "ATTVALUE_TEXT", "JINJA_EXPR_START", 
			"JINJA_STMT_START", "JINJA_EXPR_END", "JINJA_STMT_END", "JINJA_NAME", 
			"JINJA_NUMBER", "JINJA_STRING", "HTML_COMMENT", "STYLE_OPEN", "SCRIPT_OPEN", 
			"JINJA_COMMENT_START", "TAG_OPEN", "HTML_TEXT", "TAG_CLOSE", "TAG_SLASH_CLOSE", 
			"TAG_SLASH", "TAG_NAME", "TAG_WHITESPACE", "ATTR_DQ_COMMENT_START", "ATTR_DQ_CLOSE", 
			"ATTR_SQ_COMMENT_START", "ATTR_SQ_CLOSE", "STYLE_CLOSE", "STYLE_WS", 
			"STYLE_JINJA_COMMENT_START", "CSS_COMMENT", "CSS_LBRACE", "CSS_RBRACE", 
			"CSS_COLON", "CSS_SEMI", "CSS_DOT", "CSS_HASH", "CSS_LPAREN", "CSS_RPAREN", 
			"CSS_COMMA", "CSS_AT", "CSS_TILDE", "CSS_IDENT", "CSS_NUMBER", "CSS_STRING", 
			"SCRIPT_JINJA_COMMENT_START", "SCRIPT_CLOSE", "SCRIPT_COMMENT", "SCRIPT_LINE_COMMENT", 
			"SCRIPT_LBRACE", "SCRIPT_RBRACE", "SCRIPT_LT", "SCRIPT_OTHER", "JEXPR_WS", 
			"JSTMT_WS", "JCOMMENT_END", "JCOMMENT_TEXT", "STYLE_PLUS", "STYLE_MINUS", 
			"STYLE_STAR", "JEXPR_END", "JSTMT_END", "JSTMT_IF", "JSTMT_ELIF", "JSTMT_ELSE", 
			"JSTMT_ENDIF", "JSTMT_FOR", "JSTMT_ENDFOR", "JSTMT_SET", "JSTMT_IN", 
			"JSTMT_AND", "JSTMT_OR", "JSTMT_ASSIGN"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "WebParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public WebParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class HtmlDocumentContext extends ParserRuleContext {
		public HtmlContentContext htmlContent() {
			return getRuleContext(HtmlContentContext.class,0);
		}
		public TerminalNode EOF() { return getToken(WebParser.EOF, 0); }
		public HtmlDocumentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_htmlDocument; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WebParserListener ) ((WebParserListener)listener).enterHtmlDocument(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WebParserListener ) ((WebParserListener)listener).exitHtmlDocument(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof WebParserVisitor ) return ((WebParserVisitor<? extends T>)visitor).visitHtmlDocument(this);
			else return visitor.visitChildren(this);
		}
	}

	public final HtmlDocumentContext htmlDocument() throws RecognitionException {
		HtmlDocumentContext _localctx = new HtmlDocumentContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_htmlDocument);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(40);
			htmlContent();
			setState(41);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class HtmlContentContext extends ParserRuleContext {
		public List<HtmlElementContext> htmlElement() {
			return getRuleContexts(HtmlElementContext.class);
		}
		public HtmlElementContext htmlElement(int i) {
			return getRuleContext(HtmlElementContext.class,i);
		}
		public List<StyleElementContext> styleElement() {
			return getRuleContexts(StyleElementContext.class);
		}
		public StyleElementContext styleElement(int i) {
			return getRuleContext(StyleElementContext.class,i);
		}
		public List<ScriptElementContext> scriptElement() {
			return getRuleContexts(ScriptElementContext.class);
		}
		public ScriptElementContext scriptElement(int i) {
			return getRuleContext(ScriptElementContext.class,i);
		}
		public List<JinjaExpressionContext> jinjaExpression() {
			return getRuleContexts(JinjaExpressionContext.class);
		}
		public JinjaExpressionContext jinjaExpression(int i) {
			return getRuleContext(JinjaExpressionContext.class,i);
		}
		public List<JinjaStatementContext> jinjaStatement() {
			return getRuleContexts(JinjaStatementContext.class);
		}
		public JinjaStatementContext jinjaStatement(int i) {
			return getRuleContext(JinjaStatementContext.class,i);
		}
		public List<TerminalNode> HTML_TEXT() { return getTokens(WebParser.HTML_TEXT); }
		public TerminalNode HTML_TEXT(int i) {
			return getToken(WebParser.HTML_TEXT, i);
		}
		public HtmlContentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_htmlContent; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WebParserListener ) ((WebParserListener)listener).enterHtmlContent(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WebParserListener ) ((WebParserListener)listener).exitHtmlContent(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof WebParserVisitor ) return ((WebParserVisitor<? extends T>)visitor).visitHtmlContent(this);
			else return visitor.visitChildren(this);
		}
	}

	public final HtmlContentContext htmlContent() throws RecognitionException {
		HtmlContentContext _localctx = new HtmlContentContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_htmlContent);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(51);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					setState(49);
					_errHandler.sync(this);
					switch (_input.LA(1)) {
					case TAG_OPEN:
						{
						setState(43);
						htmlElement();
						}
						break;
					case STYLE_OPEN:
						{
						setState(44);
						styleElement();
						}
						break;
					case SCRIPT_OPEN:
						{
						setState(45);
						scriptElement();
						}
						break;
					case JINJA_EXPR_START:
						{
						setState(46);
						jinjaExpression();
						}
						break;
					case JINJA_STMT_START:
						{
						setState(47);
						jinjaStatement();
						}
						break;
					case HTML_TEXT:
						{
						setState(48);
						match(HTML_TEXT);
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					} 
				}
				setState(53);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class HtmlElementContext extends ParserRuleContext {
		public HtmlElementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_htmlElement; }
	 
		public HtmlElementContext() { }
		public void copyFrom(HtmlElementContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class NormalHtmlElementContext extends HtmlElementContext {
		public List<TerminalNode> TAG_OPEN() { return getTokens(WebParser.TAG_OPEN); }
		public TerminalNode TAG_OPEN(int i) {
			return getToken(WebParser.TAG_OPEN, i);
		}
		public List<TerminalNode> TAG_NAME() { return getTokens(WebParser.TAG_NAME); }
		public TerminalNode TAG_NAME(int i) {
			return getToken(WebParser.TAG_NAME, i);
		}
		public List<TerminalNode> TAG_CLOSE() { return getTokens(WebParser.TAG_CLOSE); }
		public TerminalNode TAG_CLOSE(int i) {
			return getToken(WebParser.TAG_CLOSE, i);
		}
		public HtmlContentContext htmlContent() {
			return getRuleContext(HtmlContentContext.class,0);
		}
		public TerminalNode TAG_SLASH() { return getToken(WebParser.TAG_SLASH, 0); }
		public List<AttributeContext> attribute() {
			return getRuleContexts(AttributeContext.class);
		}
		public AttributeContext attribute(int i) {
			return getRuleContext(AttributeContext.class,i);
		}
		public NormalHtmlElementContext(HtmlElementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WebParserListener ) ((WebParserListener)listener).enterNormalHtmlElement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WebParserListener ) ((WebParserListener)listener).exitNormalHtmlElement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof WebParserVisitor ) return ((WebParserVisitor<? extends T>)visitor).visitNormalHtmlElement(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class SelfClosingHtmlElementContext extends HtmlElementContext {
		public TerminalNode TAG_OPEN() { return getToken(WebParser.TAG_OPEN, 0); }
		public TerminalNode TAG_NAME() { return getToken(WebParser.TAG_NAME, 0); }
		public TerminalNode TAG_SLASH_CLOSE() { return getToken(WebParser.TAG_SLASH_CLOSE, 0); }
		public List<AttributeContext> attribute() {
			return getRuleContexts(AttributeContext.class);
		}
		public AttributeContext attribute(int i) {
			return getRuleContext(AttributeContext.class,i);
		}
		public SelfClosingHtmlElementContext(HtmlElementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WebParserListener ) ((WebParserListener)listener).enterSelfClosingHtmlElement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WebParserListener ) ((WebParserListener)listener).exitSelfClosingHtmlElement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof WebParserVisitor ) return ((WebParserVisitor<? extends T>)visitor).visitSelfClosingHtmlElement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final HtmlElementContext htmlElement() throws RecognitionException {
		HtmlElementContext _localctx = new HtmlElementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_htmlElement);
		int _la;
		try {
			setState(78);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				_localctx = new NormalHtmlElementContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(54);
				match(TAG_OPEN);
				setState(55);
				match(TAG_NAME);
				setState(59);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==TAG_NAME) {
					{
					{
					setState(56);
					attribute();
					}
					}
					setState(61);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(62);
				match(TAG_CLOSE);
				setState(63);
				htmlContent();
				setState(64);
				match(TAG_OPEN);
				setState(65);
				match(TAG_SLASH);
				setState(66);
				match(TAG_NAME);
				setState(67);
				match(TAG_CLOSE);
				}
				break;
			case 2:
				_localctx = new SelfClosingHtmlElementContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(69);
				match(TAG_OPEN);
				setState(70);
				match(TAG_NAME);
				setState(74);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==TAG_NAME) {
					{
					{
					setState(71);
					attribute();
					}
					}
					setState(76);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(77);
				match(TAG_SLASH_CLOSE);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StyleElementContext extends ParserRuleContext {
		public TerminalNode STYLE_OPEN() { return getToken(WebParser.STYLE_OPEN, 0); }
		public TerminalNode STYLE_CLOSE() { return getToken(WebParser.STYLE_CLOSE, 0); }
		public List<StyleContentContext> styleContent() {
			return getRuleContexts(StyleContentContext.class);
		}
		public StyleContentContext styleContent(int i) {
			return getRuleContext(StyleContentContext.class,i);
		}
		public StyleElementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_styleElement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WebParserListener ) ((WebParserListener)listener).enterStyleElement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WebParserListener ) ((WebParserListener)listener).exitStyleElement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof WebParserVisitor ) return ((WebParserVisitor<? extends T>)visitor).visitStyleElement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StyleElementContext styleElement() throws RecognitionException {
		StyleElementContext _localctx = new StyleElementContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_styleElement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(80);
			match(STYLE_OPEN);
			setState(84);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & -144115181633396706L) != 0) || ((((_la - 64)) & ~0x3f) == 0 && ((1L << (_la - 64)) & 127L) != 0)) {
				{
				{
				setState(81);
				styleContent();
				}
				}
				setState(86);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(87);
			match(STYLE_CLOSE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ScriptElementContext extends ParserRuleContext {
		public TerminalNode SCRIPT_OPEN() { return getToken(WebParser.SCRIPT_OPEN, 0); }
		public TerminalNode SCRIPT_CLOSE() { return getToken(WebParser.SCRIPT_CLOSE, 0); }
		public List<ScriptContentContext> scriptContent() {
			return getRuleContexts(ScriptContentContext.class);
		}
		public ScriptContentContext scriptContent(int i) {
			return getRuleContext(ScriptContentContext.class,i);
		}
		public ScriptElementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_scriptElement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WebParserListener ) ((WebParserListener)listener).enterScriptElement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WebParserListener ) ((WebParserListener)listener).exitScriptElement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof WebParserVisitor ) return ((WebParserVisitor<? extends T>)visitor).visitScriptElement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ScriptElementContext scriptElement() throws RecognitionException {
		ScriptElementContext _localctx = new ScriptElementContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_scriptElement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(89);
			match(SCRIPT_OPEN);
			setState(93);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (((((_la - 31)) & ~0x3f) == 0 && ((1L << (_la - 31)) & 263882790666243L) != 0)) {
				{
				{
				setState(90);
				scriptContent();
				}
				}
				setState(95);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(96);
			match(SCRIPT_CLOSE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AttributeContext extends ParserRuleContext {
		public TerminalNode TAG_NAME() { return getToken(WebParser.TAG_NAME, 0); }
		public TerminalNode TAG_EQUALS() { return getToken(WebParser.TAG_EQUALS, 0); }
		public AttributeValueContext attributeValue() {
			return getRuleContext(AttributeValueContext.class,0);
		}
		public AttributeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_attribute; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WebParserListener ) ((WebParserListener)listener).enterAttribute(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WebParserListener ) ((WebParserListener)listener).exitAttribute(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof WebParserVisitor ) return ((WebParserVisitor<? extends T>)visitor).visitAttribute(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AttributeContext attribute() throws RecognitionException {
		AttributeContext _localctx = new AttributeContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_attribute);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(98);
			match(TAG_NAME);
			setState(101);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==TAG_EQUALS) {
				{
				setState(99);
				match(TAG_EQUALS);
				setState(100);
				attributeValue();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AttributeValueContext extends ParserRuleContext {
		public List<AttributeValueContentContext> attributeValueContent() {
			return getRuleContexts(AttributeValueContentContext.class);
		}
		public AttributeValueContentContext attributeValueContent(int i) {
			return getRuleContext(AttributeValueContentContext.class,i);
		}
		public AttributeValueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_attributeValue; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WebParserListener ) ((WebParserListener)listener).enterAttributeValue(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WebParserListener ) ((WebParserListener)listener).exitAttributeValue(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof WebParserVisitor ) return ((WebParserVisitor<? extends T>)visitor).visitAttributeValue(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AttributeValueContext attributeValue() throws RecognitionException {
		AttributeValueContext _localctx = new AttributeValueContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_attributeValue);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(106);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 7516192768L) != 0)) {
				{
				{
				setState(103);
				attributeValueContent();
				}
				}
				setState(108);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AttributeValueContentContext extends ParserRuleContext {
		public JinjaExpressionContext jinjaExpression() {
			return getRuleContext(JinjaExpressionContext.class,0);
		}
		public JinjaStatementContext jinjaStatement() {
			return getRuleContext(JinjaStatementContext.class,0);
		}
		public TerminalNode ATTVALUE_TEXT() { return getToken(WebParser.ATTVALUE_TEXT, 0); }
		public AttributeValueContentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_attributeValueContent; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WebParserListener ) ((WebParserListener)listener).enterAttributeValueContent(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WebParserListener ) ((WebParserListener)listener).exitAttributeValueContent(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof WebParserVisitor ) return ((WebParserVisitor<? extends T>)visitor).visitAttributeValueContent(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AttributeValueContentContext attributeValueContent() throws RecognitionException {
		AttributeValueContentContext _localctx = new AttributeValueContentContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_attributeValueContent);
		try {
			setState(112);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case JINJA_EXPR_START:
				enterOuterAlt(_localctx, 1);
				{
				setState(109);
				jinjaExpression();
				}
				break;
			case JINJA_STMT_START:
				enterOuterAlt(_localctx, 2);
				{
				setState(110);
				jinjaStatement();
				}
				break;
			case ATTVALUE_TEXT:
				enterOuterAlt(_localctx, 3);
				{
				setState(111);
				match(ATTVALUE_TEXT);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
